Refactor Redis configuration and clean up imports
- Simplified RedisCacheManager builder initialization in RedisConfig.java for improved readability.
- Removed unused imports in UserPositionOperations.java and LogisticsCarrierCodeRegistryTest.java to streamline code.
- Updated OssFileStorageProviderTest.java to replace URL with URI for better handling of signed URLs.